Related: tdf#127195 use MessageDialogController to relocate checkbox

MessageDialogController has an argument which indicates what
widget in a message dialog should be rearranged to be aligned
with the message box messsage area, "hidedialog" in this case

remove the indent amount as the relocate logic takes care of
the intent of that

Change-Id: I92f138e41ec3fd50771d210db8358e9236684157